--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "docs",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Artalk documentation",
   "repository": "https://github.com/ArtalkJS/Docs.git",
   "private": true,
   "scripts": {
-    "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs"
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:serve": "vitepress serve docs"
   },
   "devDependencies": {
-    "@vuepress/plugin-docsearch": "^2.0.0-beta.38",
-    "vuepress": "^2.0.0-beta.39"
+    "markdown-it-for-inline": "^0.1.1",
+    "sass": "^1.52.3",
+    "vitepress": "1.0.0-alpha.1"
   }
 }
